Bug 1351521 P1 Add intercepted HttpChannelChild channels to the performance timeline. r=asuth